# pigeon

./: .gitignore  CONTEXT.md  ITEM_SYSTEM.md  README.md  index.html  package-lock.json  package.json  pigeon_sprite_reference.html  pyproject.toml  sprite_reference.html  tmp-acorn-parse.js  tmp-playwright-check.mjs  tmp-pp.js
config/: animals.json  items.json  stages.json  weapons.json
pandas/: __init__.py
pigeon_sim/: __init__.py  core.py  search.py  utils.py
sim/: __init__.py  cli.py  config.py  io.py  mechanics.py  report.py  simulator.py  state.py
src/: game.js  item.js  pigeon.js  player.js  ui.js  wave.js  weapon.js
tests/: test_core.py  test_search.py  test_sim_smoke.py
