[project]
name = "pigeon-sim"
version = "0.1.0"
description = "Discrete-event stage simulator for pigeon game balancing"
authors = [{name = ""}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["pandas>=1.5"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
